@@ -15,6 +15,7 @@ Device specific changes/fixes
 	* HoTTAdapter* - refactor method updating GPS type dependent records
 	* HoTTAdapter* - update GPS type dependent records while loading from OSD
 	* HoTTAdapter* - harmonize temperature offset
+	* HoTTAdapter2 - fix GPS data import single sensor
 	* IGCAdapter - add missing unit in device XML
 	* GPS-Logger2/3 - additional measurements added with 1.26 (NMEA Import)
 
